--- a/mirco/ovelse1.html
+++ b/mirco/ovelse1.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html>
-
-	<head>
-		<meta charset="utf-8">
-		<title>Microdata - The Witcher</title>
+<html lang="en">
+<head>
+	<meta charset="utf-8">
+	<meta name="wiewport" content="width=device-width, initial-scale=1.0" >
+	<title>Microdata - The Witcher</title>
+</head>
 		<style>
 		main{
 			max-width: 900px;
