--- a/mirco/ovelse2.html
+++ b/mirco/ovelse2.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 	<head>
 		<meta charset="utf-8">
+		
 		<title>Microdata - VideoGamesSeries</title>
 		<link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet"> 
 		<style>
